<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number One" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number Two" />

    <Button
        android:id="@+id/btnAddition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evtCalculate"
        android:text="Add" />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evtCalculate"
        android:text="Subtract" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evtCalculate"
        android:text="Multiply" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evtCalculate"
        android:text="Divide" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Result" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VALUE"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evtGoToSecond"
        android:text="Go to Second" />

</LinearLayout>